--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,8 @@
 body {
     font-family: 'Georgia', serif; /* nb kogu lehe */
     color: #000000; 
+    background-color: bisque
+
 } 
 
 nav { /*ülemise rea*/
@@ -95,3 +97,63 @@ footer {
     padding: 20px; 
     margin-top: 30px; 
 }
+
+
+/* algab lisa asi*/
+.carousel-container {
+    position: relative;
+    max-width: 800px;
+    margin: 0 auto;
+     overflow: hidden;
+  
+  }
+  .carousel {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+  }
+  
+  .slide {
+    flex: 0 0 100%;
+    display: flex;
+    align-items: center;
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .prev-button,
+  .next-button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .prev-button {
+    left: 10px;
+  }
+  
+  .next-button {
+    right: 10px;
+  }
+
+
+
+
+  @media screen and (max-width: 768px) {
+    .slide {
+      flex: 0 0 100%;
+    }
+  }
+  
+  @media screen and (max-width: 480px) {
+    .carousel-container {
+      max-width: 100%;
+    }
+  }
+  
