--- a/style2.css
+++ b/style2.css
@@ -5,6 +5,10 @@ body {
 
 } 
 
+body {
+    cursor: url('kursor.png'), auto; /* Kui kohandatud pilt ei laadi, kasutatakse vaikimisi kursori stiili */
+}
+
 nav { /*ülemise rea*/
     background: #16a085; 
     height: 80px; 
@@ -37,6 +41,7 @@ nav ul li a {/* lingid */
     text-transform: uppercase; 
 }
 
+
 h1 {
     color: #2c3e50;
     text-align: left; 
@@ -67,7 +72,7 @@ p {
     display: flex; 
     align-items: center; /* Vertikaalselt */
     justify-content: center; /* Horisontaalselt */
-    margin: 20px; /* Ümber vahe*/
+    margin:20px; /* Ümber vahe*/
     padding: 10px; 
     background-color: #ecf0f1; 
     border-radius: 10px; /* Ümarad nurgad */
@@ -78,7 +83,9 @@ p {
 .container img {
     max-width: 250px; 
     border-radius: 10px; 
-    margin-right: 20px; 
+    margin-right: 20px;
+    margin-left: 60px;
+
 }
 
 a {/*  linkide välimus */
@@ -141,6 +148,22 @@ footer {
   .next-button {
     right: 10px;
   }
+
+
+
+
+
+  .section {
+    opacity: 1; /* Ajutiselt nähtav */
+    transform: translateY(0); /* Ajutiselt neutraalne positsioon */
+    transition: all 0.6s ease-in-out;
+}
+
+.section.visible {
+    opacity: 1; /* Täielikult nähtav */
+    transform: translateY(0);
+}
+
 
 
 
