--- a/lisaleht.css
+++ b/lisaleht.css
@@ -15,6 +15,9 @@ body {
 }
 
 .word {
+  visibility: visible;
+  opacity: 0;
+  transition: opacity 1s;
   bottom: 0;
   color: #fff;
   font-size: 2.5em;
@@ -37,6 +40,11 @@ body {
 .word .done {
   color: #6f6;
   transform: translateX(0) scale(1);
+}
+
+.word.loaded {
+  visibility: visible; /* Nähtav peale laadimist */
+  opacity: 1;
 }
 
 .overlay {
