--- a/style2.css
+++ b/style2.css
@@ -42,11 +42,11 @@ nav ul li a {/* lingid */
 }
 
 
-h1 {
+header h1 {
+    font-size: 100px !important;
     color: #2c3e50;
-    text-align: left; 
-    margin: 20px 0; /* Ülemval/all vahe */
-    font-size: 40px; 
+    text-align: center; 
+    margin: 150px 0; /* Ülemval/all vahe */ 
 }
 
 h2 {
@@ -152,19 +152,13 @@ footer {
 
 
 
-
-  .section {
-    opacity: 1; /* Ajutiselt nähtav */
-    transform: translateY(0); /* Ajutiselt neutraalne positsioon */
-    transition: all 0.6s ease-in-out;
-}
-
-.section.visible {
-    opacity: 1; /* Täielikult nähtav */
-    transform: translateY(0);
-}
-
-
+  .section { 
+    opacity: 0; 
+    transition: opacity 0.6s ease-in-out; 
+  } 
+  .section.visible { 
+    opacity: 1
+  }
 
 
 
