--- a/style2.css
+++ b/style2.css
@@ -106,40 +106,39 @@ footer {
 }
 
 
-/* algab lisa asi*/
+/* algab lisa karussellile*/
 .carousel-container {
     position: relative;
-    max-width: 800px;
-    margin: 0 auto;
-     overflow: hidden;
+    max-width: 800px; /*max laius*/
+    margin: 0 auto;/* joondatud horisontaalselt */
+     overflow: hidden; /* Ülejääk sisu on peidetud */
   
   }
   .carousel {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
+    display: flex; /* Karussell kasutab paigutuse jaoks flexboxi -->paindlikum dünaamiliste asjadega(tõhusamalt asju paigutada ja joondada selleskonteineris)*/
+    transition: transform 0.5s ease-in-out;/* Sujuv üleminek */
   }
   
   .slide {
-    flex: 0 0 100%;
-    display: flex;
-    align-items: center;
-  }
+    flex: 0 0 100%; /* Iga slaid võtab 100% laiust */ 
+    display: flex; /* Slaid kasutab paigutuse jaoks flexboxi */ 
+    align-items: center; /* Keskjoondatud vertikaalselt */ }
   
   img {
-    max-width: 100%;
-    height: auto;
+    max-width: 100%;/*pildi max laius karusellis*/
+    height: auto;/*säilitab pildi proportsioonid*/
   }
   
   .prev-button,
   .next-button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 24px;
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
+    position: absolute; /*karusellis*/
+    top: 50%; /* Vertikaalne joondamine */
+    transform: translateY(-50%); /* Keskendab nuppu vertikaalselt */
+    font-size: 24px; /* Nupu suurus */
+    background: none; /* Ei ole taustavärvi */
+    border: none; /* Eemaldab äärised */
+    cursor: pointer; /* Kursori ikoon muutub klikitavaks */
+}
   
   .prev-button {
     left: 10px;
@@ -151,26 +150,26 @@ footer {
 
 
 
-
+/*dünaamilisele tekstile*/
   .section { 
-    opacity: 0; 
-    transition: opacity 0.6s ease-in-out; 
+    opacity: 0; /* Alguses nähtamatu */
+    transition: opacity 0.6s ease-in-out; /* Sujuv ilmumine */
   } 
   .section.visible { 
-    opacity: 1
+    opacity: 1/* Nähtavaks muutumine */
   }
 
 
-
+/* Meedia päringud väiksemate ekraanide jaoks */
   @media screen and (max-width: 768px) {
     .slide {
-      flex: 0 0 100%;
+      flex: 0 0 100%;/* Iga slaid täidab 100% laiuse */
     }
   }
   
   @media screen and (max-width: 480px) {
     .carousel-container {
-      max-width: 100%;
+      max-width: 100%; /* Kohandab karusselli laiust kitsastes vaadetes */
     }
   }
   
